--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
   },
   "devDependencies": {
     "@parcel/transformer-pug": "^2.13.3",
-    "@parcel/transformer-sass": "^2.13.3"
+    "@parcel/transformer-sass": "^2.13.3",
+    "gh-pages": "^6.3.0",
+    "push-dir": "^0.4.1"
   }
 }
