--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "parcel index.pug",
     "build": "rimraf dist && parcel build --public-url ./ index.pug",
     "deploy": "git push origin :gh-pages && git subtree push --prefix dist origin gh-pages"
   },
